--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Shopping List built with mern stack",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
